<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TODO LIST</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_detail">Detail</string>
    <string name="add">Aufgabe hinzufügen</string>
    <string name="setting">Einstellungen</string>
    <string name="task">Aufgabe:</string>
    <string name="titel">Titel:</string>
    <string name="beschreibung">Beschreibung:</string>
    <string name="prioritaet">Priorität:</string>
    <string name="save">Speichern</string>
    <string name="delete">Löschen</string>
    <string name="einstellungen">Einstellungen</string>
    <string name="schriftgroesse">Schriftgröße</string>
    <string name="delete_last">Letztes Element löschen</string>
    <string name="schriftgroessee_aendern">Schriftgröße ändern</string>
    <string name="schriftgroessee_aendern_2">Schriftgröße ändern:</string>
    <string name="manageCategories">Kategorien verwalten</string>
    <string name="managePriorities">Prioritäten verwalten</string>
    <string name="categories">Kategorien</string>
    <string name="addCategories">Kategorie hinzufügen</string>
    <string name="category">Kategorie</string>
    <string name="addCategory">Hinzufügen</string>
    <string name="addPriorities">Hinzufügen</string>
    <string name="priorities">Prioritäten</string>
    <string name="priority">Priorität</string>

    <string-array name="array_priority">
        <item>mittel</item>
        <item>hoch</item>
        <item>gering</item>
    </string-array>

    <string name="title_activity_setting_main">Setting_main</string>
    <string name="title_activity_get_setting_main">GetSetting_main</string>
    <string name="title_activity_my_preferences">MyPreferencesActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_category_manage">CategoryManage</string>
    <string name="title_activity_priority_manager">PriorityManager</string>
    <string name="title_activity_to_do__category__manager">ToDo_Category_Manager</string>

</resources>
